--- a/samconfig.toml
+++ b/samconfig.toml
@@ -3,8 +3,9 @@ version = 0.1
 stack_name = "SensorApiFunction"
 resolve_s3 = true
 s3_prefix = "SensorApiFunction"
-region = "eu-west-1"
+region = "us-west-2"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 disable_rollback = true
 image_repositories = []
+profile = "brian_priv"
